Code and internal documentation clean-up. Switched class from URL to URI.